fix: always show scrollbar to avoid layout shift

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -19,6 +19,10 @@
 }
 
 @layer base {
+  body {
+    overflow-y: scroll;
+  }
+
   input[type='number']::-webkit-outer-spin-button,
   input[type='number']::-webkit-inner-spin-button,
   input[type='number'] {
